--- a/index.html
+++ b/index.html
@@ -49,25 +49,50 @@
       <h2 class="section-title">About Me</h2>
       <div class="about-content">
         <div class="about-text">
-          <p>I'm a highly ambitious and hard-working computer science student at Ontario Tech University with a cGPA of 4.05/4.30. I'm passionate about creating impactful software solutions and currently seeking co-op opportunities to apply my skills in real-world scenarios.</p>
-          <p>When I'm not coding, you can find me contributing to open-source projects, learning new technologies, or participating in university clubs like the MSA, PSA, and Computer Science Club.</p>
+          <p>I'm a highly ambitious and hard-working computer science student at Ontario Tech University, having recently finished my second year with a cumulative GPA of 4.10 out of 4.30. I'm passionate about creating impactful software solutions and currently seeking co-op opportunities to apply my skills in real-world scenarios.</p>
+          <p>A bit about my background — I was born and raised in Canada, while my parents are originally from Pakistan, with roots that trace across South Asia and the Middle East. In my free time, I enjoy playing sports, especially basketball, soccer, and badminton. I'm also an anime fan, with Vinland Saga and Bleach being two of my favorites. Occasionally, I like to unwind by playing video games on my Xbox.</p>
+          <p>When I'm not coding, you can find me contributing to open-source projects, learning new technologies, and getting involved in university clubs and events like the MSA, PSA, CS Club, and HackHive hackathons.</p>
           <div class="stats">
             <div class="stat-item">
-              <span class="stat-number">4.05</span>
+              <span class="stat-number">3rd</span>
+              <span class="stat-label">Current Year of Study</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">4.10</span>
               <span class="stat-label">cGPA</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">3x</span>
+              <span class="stat-label">President's Honours List</span>
+            </div>
+            <div class="stat-item">
+              <span class="stat-number">2x</span>
+              <span class="stat-label">Course Scholarships</span>
             </div>
             <div class="stat-item">
               <span class="stat-number">2027</span>
               <span class="stat-label">Grad Year</span>
             </div>
-            <div class="stat-item">
-              <span class="stat-number">3x</span>
-              <span class="stat-label">Honours List</span>
-            </div>
           </div>
         </div>
         <div class="about-image">
-          <img src="images/University.jpg" alt="Ontario Tech University" class="profile-image">
+          <div class="slideshow-container">
+            <div class="slide active">
+              <img src="images/University.jpg" alt="Ontario Tech University">
+            </div>
+            <div class="slide">
+              <img src="images/Flags.jpg" alt="Flags">
+            </div>
+            <div class="slide">
+              <img src="images/CS.jpg" alt="Computer Science">
+            </div>
+            <div class="slide">
+              <img src="images/Event.jpg" alt="University Event">
+            </div>
+            <div class="slide">
+              <img src="images/Microsoft.jpg" alt="University Event">
+            </div>
+          </div>
         </div>
       </div>
     </div>
