--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rayan Alam</title>
+  <title>Rayan Alam Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
@@ -722,7 +722,10 @@
         
       <form id="contactForm" action="https://formsubmit.co/alamrayan103@gmail.com" method="POST" class="contact-form">
         <!-- FormSubmit required fields -->
+        <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="table">
+        <input type="hidden" name="_next" value="https://rayan-alam-uoit.github.io/thank-you.html">
+        <input type="hidden" name="_subject" value="New message from your portfolio">
         
         <div class="form-group">
           <input type="text" name="name" placeholder="Your Name" required>
