Minor updates and tweaks

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               <span class="skill-level advanced">Advanced</span>
             </li>
             <li>
-              <span class="skill-name">Miro</span>
+              <span class="skill-name">Apache Maven</span>
               <span class="skill-level advanced">Advanced</span>
             </li>
             <li>
@@ -218,6 +218,10 @@
             </li>
             <li>
               <span class="skill-name">JupyterLab</span>
+              <span class="skill-level advanced">Advanced</span>
+            </li>
+            <li>
+              <span class="skill-name">Miro</span>
               <span class="skill-level advanced">Advanced</span>
             </li>
             <li>
