--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
               <span class="skill-level advanced">Advanced</span>
             </li>
             <li>
-              <span class="skill-name">HTML</span>
+              <span class="skill-name">HTML5</span>
               <span class="skill-level advanced">Advanced</span>
             </li>
             <li>
-              <span class="skill-name">CSS</span>
+              <span class="skill-name">CSS3</span>
               <span class="skill-level advanced">Advanced</span>
             </li>
             <li>
