--- a/index.html
+++ b/index.html
@@ -232,6 +232,10 @@
               <span class="skill-name">MATLAB</span>
               <span class="skill-level intermediate">Intermediate</span>
             </li>
+            <li>
+              <span class="skill-name">Unix</span>
+              <span class="skill-level intermediate">Intermediate</span>
+            </li>
           </ul>
         </div>
         
@@ -373,7 +377,7 @@
           </div>
           <div class="project-content">
             <h3>Scientific Data Analysis Project</h3>
-            <p class="project-tech">Python | NumPy | Pandas | Seaborn | Matplotlib | Jupyterlab | VS Code</p>
+            <p class="project-tech">Python | PyTest | NumPy | Pandas | Seaborn | Matplotlib | JupyterLab | VS Code</p>
             <p class="project-description">Developed an end-to-end data workflow in Python on the rainfall crisis in Pakistan, to uncover patterns, trends, and insights that could support better understanding and potential solutions to the situation.</p>
             <div class="project-features">
               <h4>Key Features:</h4>
@@ -401,7 +405,7 @@
           </div>
           <div class="project-content">
             <h3>Multiplayer Trivia Quiz Game</h3>
-            <p class="project-tech">Java Swing | Java | Git | IntelliJ IDEA</p>
+            <p class="project-tech">Java Swing | Java | Git | Windows | Linux | IntelliJ IDEA</p>
             <p class="project-description">Designed and developed a real-time multiplayer trivia quiz game called "Those Who Know" that supports multiple concurrent players, enabling interactive and synchronized gameplay across clients.</p>
             <div class="project-features">
               <h4>Key Features:</h4>
@@ -457,7 +461,7 @@
           </div>
           <div class="project-content">
             <h3>File Sharer Application</h3>
-            <p class="project-tech">Java Swing | Java | Git | Maven | IntelliJ IDEA</p>
+            <p class="project-tech">Java Swing | Java | Git | Windows | Linux | IntelliJ IDEA</p>
             <p class="project-description">Designed and developed a real-time, multi-threaded file sharing system enabling client-server interactions through a variety of commands for a smooth user experience.</p>
             <div class="project-features">
               <h4>Key Features:</h4>
@@ -485,7 +489,7 @@
           </div>
           <div class="project-content">
             <h3>Fashion and Clothing Catalogue</h3>
-            <p class="project-tech">Java Swing | Java | SQL | JUnit | Git | Maven | IntelliJ IDEA | MS Office</p>
+            <p class="project-tech">Java Swing | Java | SQL | JUnit | Git | Maven | IntelliJ IDEA | MS Office | Figma</p>
             <p class="project-description">Designed and developed a visually engaging fashion catalogue for seamless clothing storage and an endless browsing experience between administrators and users alike.</p>
             <div class="project-features">
               <h4>Key Features:</h4>
