--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
             <i class="fas fa-users"></i>
           </div>
           <div class="award-content">
-            <h3>Best Team of 2022</h3>
+            <h3>Best Team of 2022 Award</h3>
             <p class="award-org">MY Voice Canada</p>
             <p class="award-date">September 2022</p>
             <div class="award-badge">Team Achievement</div>
