Skills and resume updates

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
             <span class="skill-level advanced">Advanced</span>
           </li>
           <li>
+            <span class="skill-name">Linux</span>
+            <span class="skill-level advanced">Advanced</span>
+          </li>
+          <li>
             <span class="skill-name">Apache Maven</span>
             <span class="skill-level advanced">Advanced</span>
           </li>
@@ -229,7 +233,7 @@
             <span class="skill-level advanced">Advanced</span>
           </li>
           <li>
-            <span class="skill-name">Linux</span>
+            <span class="skill-name">SAS</span>
             <span class="skill-level intermediate">Intermediate</span>
           </li>
           <li>
