Resume and skill updates

--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
             <span class="skill-name">Microsoft Office</span>
             <span class="skill-level expert">Expert</span>
           </li>
+           <li>
+            <span class="skill-name">Google Workspace</span>
+            <span class="skill-level expert">Expert</span>
+          </li>
           <li>
             <span class="skill-name">Figma</span>
             <span class="skill-level expert">Expert</span>
@@ -208,12 +212,12 @@
             <span class="skill-name">Flutter</span>
             <span class="skill-level advanced">Advanced</span>
           </li>
-          <li>
-            <span class="skill-name">Android Studio</span>
+           <li>
+            <span class="skill-name">Linux</span>
             <span class="skill-level advanced">Advanced</span>
           </li>
           <li>
-            <span class="skill-name">Linux</span>
+            <span class="skill-name">Android Studio</span>
             <span class="skill-level advanced">Advanced</span>
           </li>
           <li>
@@ -231,10 +235,6 @@
           <li>
             <span class="skill-name">Miro</span>
             <span class="skill-level advanced">Advanced</span>
-          </li>
-          <li>
-            <span class="skill-name">SAS</span>
-            <span class="skill-level intermediate">Intermediate</span>
           </li>
           <li>
             <span class="skill-name">MATLAB</span>
