Minor design updates

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <script defer src="script.js"></script>
 </head>
 <body>
+  <!-- Animated Gradient Mesh Background -->
+<div class="gradient-mesh"></div>
   <!-- Navigation Bar -->
   <nav class="navbar">
     <div class="container">
@@ -41,7 +43,7 @@
   <header class="hero">
     <div class="container">
       <div class="hero-content">
-        <h1>Rayan Alam</h1>
+        <h1>Hey there, I'm Rayan!</h1>
         <h2 id="typewriter-text"></h2> <!-- Typewriter effect will be inserted here -->
         <p>Building innovative solutions at Ontario Tech University</p>
         <div class="cta-buttons">
