--- a/index.html
+++ b/index.html
@@ -484,10 +484,10 @@
             <div class="project-features">
               <h4>Key Features:</h4>
               <ul>
-                <li>Secure File Operations</li>
-                <li>Integrated Search Functionality</li>
-                <li>Real-Time File Interaction</li>
-                <li>Cross-Platform Compatibility</li>
+                <li>Secure file operations</li>
+                <li>Integrated search functionality</li>
+                <li>Real-time file interaction</li>
+                <li>Cross-platform compatibility</li>
               </ul>
             </div>
             <div class="project-links">
