--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             </div>
           </div>
           <div class="project-content">
-            <h3>Scientific Data Analysis Project</h3>
+            <h3>Scientific Data Analysis Report</h3>
             <p class="project-tech">Python | NumPy | Pandas | Seaborn | Matplotlib | JupyterLab | VS Code</p>
             <p class="project-description">Developed an end-to-end data workflow in Python on the rainfall crisis in Pakistan, to uncover patterns, trends, and insights that could support better understanding and potential solutions to the situation.</p>
             <div class="project-features">
@@ -403,7 +403,7 @@
                 <li>Automated data cleaning</li>
                 <li>Exploratory data analysis</li>
                 <li>Insightful data visualizations</li>
-                <li>Scientific report formatting</li>
+                <li>Jupyter Notebook formatting</li>
               </ul>
             </div>
             <div class="project-links">
